// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/DefaultAvatar test avatar component 1`] = `
<View
  style={
    {
      "borderRadius": 15,
      "height": 30,
      "overflow": "hidden",
      "width": 30,
    }
  }
>
  <Image
    source={
      {
        "testUri": "../../../src/images/default-photo.png",
      }
    }
    style={
      {
        "height": "100%",
        "resizeMode": "cover",
        "width": "100%",
      }
    }
  />
</View>
`;

exports[`components/DefaultAvatar test large avatar component 1`] = `
<View
  style={
    {
      "borderRadius": 30,
      "height": 60,
      "overflow": "hidden",
      "width": 60,
    }
  }
>
  <Image
    source={
      {
        "testUri": "../../../src/images/default-photo.png",
      }
    }
    style={
      {
        "height": "100%",
        "resizeMode": "cover",
        "width": "100%",
      }
    }
  />
</View>
`;

exports[`components/DefaultAvatar test small avatar component 1`] = `
<View
  style={
    {
      "borderRadius": 10,
      "height": 20,
      "overflow": "hidden",
      "width": 20,
    }
  }
>
  <Image
    source={
      {
        "testUri": "../../../src/images/default-photo.png",
      }
    }
    style={
      {
        "height": "100%",
        "resizeMode": "cover",
        "width": "100%",
      }
    }
  />
</View>
`;
